Thu Feb 18 15:35:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.mpc:
          Updated to use tao_idl generation

        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.cpp:
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.h:
          Removed from the archive

Thu Feb 18 14:22:29 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataWriterListener.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
        * connectors/dds4ccm/impl/ndds/PublisherListener.cpp:
        * connectors/dds4ccm/impl/ndds/QueryCondition.cpp:
        * connectors/dds4ccm/impl/ndds/ReadCondition.cpp:
        * connectors/dds4ccm/impl/ndds/TopicDescription.cpp:
        * connectors/dds4ccm/impl/ndds/TopicListener.cpp:
          Implemented ACE_NEW_* macros.

Thu Feb 18 13:48:20 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/TwoTopics/Connector/TwoTopics_Connector.mpc:
          Removed dummy label to enable compilation.

Thu Feb 18 13:44:59 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/FixedSizeStruct/EventConnector/Connector/FSS_Event_Connector.mpc:
        * connectors/dds4ccm/tests/FixedSizeStruct/StateConnector/Connector/FSS_State_Connector.mpc:
          Removed dummy label.

        * connectors/dds4ccm/tests/FixedSizeStruct/EventConnector/Receiver/*:
        * connectors/dds4ccm/tests/FixedSizeStruct/EventConnector/Sender/*:
        * connectors/dds4ccm/tests/FixedSizeStruct/EventConnector/descriptors/*:
        * connectors/dds4ccm/tests/FixedSizeStruct/StateConnector/Receiver/*:
        * connectors/dds4ccm/tests/FixedSizeStruct/StateConnector/Sender/*:
        * connectors/dds4ccm/tests/FixedSizeStruct/StateConnector/descriptors/*:
          Removed these files since this is there to capture compiler errors.
